Cleanup for SDK.
