# example-api/swagger.json
@@ -1,194 +1,210 @@
 {
-  "paths": {
-    "/hello/there": {
-      "get": {
-        "x-amazon-lambda": {
-          "handler": "./hello/there",
-          "memorySize": "128",
-          "role": "arn:aws:iam::347191724861:role/Lambda",
-          "timeout": "60",
-          "runtime": "nodejs",
-          "arn": "arn:aws:lambda:us-east-1:347191724861:function:MySampleAPI-Hello-There-GET"
-        },
-        "x-amazon-apigateway-auth": {
-          "type": "NONE"
-        },
-        "x-amazon-apigateway-integration": {
-          "type": "AWS",
-          "uri": null,
-          "apiKeyRequired": false,
-          "httpMethod": "GET",
-          "cacheNamespace": null,
-          "cacheKeyParameters": [],
-          "credentials": null,
-          "requestTemplates": {
-            "application/json": {
-              "payload": "$input.params()",
-              "path": "$input.params().path",
-              "query": "$input.params().querystring",
-              "header": "$input.params().header",
-              "Authorization": "$input.params(\"Authorization\")"
+    "paths": {
+        "/hello/there": {
+            "get": {
+                "operationId": "MySampleAPI-Hello-There-GET",
+                "x-api-deploy": {
+                    "sdk": {
+                        "method": "helloThere"
+                    }
+                },
+                "x-amazon-lambda": {
+                    "handler": "./hello/there",
+                    "memorySize": "128",
+                    "role": "arn:aws:iam::347191724861:role/Lambda",
+                    "timeout": "60",
+                    "runtime": "nodejs",
+                    "arn": "arn:aws:lambda:us-east-1:347191724861:function:MySampleAPI-Hello-There-GET"
+                },
+                "x-amazon-apigateway-auth": {
+                    "type": "NONE"
+                },
+                "x-amazon-apigateway-integration": {
+                    "type": "AWS",
+                    "uri": null,
+                    "apiKeyRequired": false,
+                    "httpMethod": "GET",
+                    "cacheNamespace": null,
+                    "cacheKeyParameters": [],
+                    "credentials": null,
+                    "requestTemplates": {
+                        "application/json": {
+                            "payload": "$input.params()",
+                            "path": "$input.params().path",
+                            "query": "$input.params().querystring",
+                            "header": "$input.params().header",
+                            "Authorization": "$input.params(\"Authorization\")"
+                        }
+                    },
+                    "requestParameters": {
+                        "method.request.header.Authorization": true
+                    },
+                    "requestModels": {
+                        "application/json": "Empty"
+                    },
+                    "responses": {
+                        "200": {
+                            "statusCode": "200",
+                            "responseParameters": {
+                                "method.response.header.Access-Control-Allow-Headers": "'Content-Type,X-Amz-Date,Authorization'",
+                                "method.response.header.Access-Control-Allow-Methods": "'*'",
+                                "method.response.header.Access-Control-Allow-Origin": "'*'"
+                            },
+                            "responseModels": {
+                                "application/json": "Empty"
+                            }
+                        },
+                        "default": {
+                            "statusCode": "400",
+                            "responseParameters": {
+                                "method.response.header.Access-Control-Allow-Headers": "'Content-Type,X-Amz-Date,Authorization'",
+                                "method.response.header.Access-Control-Allow-Methods": "'*'",
+                                "method.response.header.Access-Control-Allow-Origin": "'*'"
+                            },
+                            "responseModels": {
+                                "application/json": "Empty"
+                            }
+                        }
+                    }
+                },
+                "operatdionId": "MySampleAPI-Hello-There-GET"
             }
-          },
-          "requestParameters": {
-            "method.request.header.Authorization": true
-          },
-          "requestModels": {
-            "application/json": "Empty"
-          },
-          "responses": {
-            "200": {
-              "statusCode": "200",
-              "responseParameters": {
-                "method.response.header.Access-Control-Allow-Headers": "'Content-Type,X-Amz-Date,Authorization'",
-                "method.response.header.Access-Control-Allow-Methods": "'*'",
-                "method.response.header.Access-Control-Allow-Origin": "'*'"
-              },
-              "responseModels": {
-                "application/json": "Empty"
-              }
+        },
+        "/hello": {
+            "post": {
+                "operationId": "MySampleAPI-Hello-World-POST",
+                "x-api-deploy": {
+                    "sdk": {
+                        "method": "hello"
+                    }
+                },
+                "x-amazon-lambda": {
+                    "handler": "./hello/world",
+                    "memorySize": "128",
+                    "role": "arn:aws:iam::347191724861:role/Lambda",
+                    "timeout": "60",
+                    "runtime": "nodejs",
+                    "arn": "arn:aws:lambda:us-east-1:347191724861:function:MySampleAPI-Hello-World-POST"
+                },
+                "x-amazon-apigateway-auth": {
+                    "type": "NONE"
+                },
+                "x-amazon-apigateway-integration": {
+                    "type": "AWS",
+                    "uri": null,
+                    "apiKeyRequired": false,
+                    "httpMethod": "POST",
+                    "cacheNamespace": null,
+                    "cacheKeyParameters": [],
+                    "credentials": null,
+                    "requestTemplates": {
+                        "application/json": {
+                            "payload": "$input.params()",
+                            "path": "$input.params().path",
+                            "query": "$input.params().querystring",
+                            "header": "$input.params().header",
+                            "Authorization": "$input.params(\"Authorization\")"
+                        }
+                    },
+                    "requestParameters": {
+                        "method.request.header.Authorization": true
+                    },
+                    "requestModels": {
+                        "application/json": "Empty"
+                    },
+                    "responses": {
+                        "200": {
+                            "statusCode": "200",
+                            "responseParameters": {
+                                "method.response.header.Access-Control-Allow-Headers": "'Content-Type,X-Amz-Date,Authorization'",
+                                "method.response.header.Access-Control-Allow-Methods": "'*'",
+                                "method.response.header.Access-Control-Allow-Origin": "'*'"
+                            },
+                            "responseModels": {
+                                "application/json": "Empty"
+                            }
+                        },
+                        "default": {
+                            "statusCode": "400",
+                            "responseParameters": {
+                                "method.response.header.Access-Control-Allow-Headers": "'Content-Type,X-Amz-Date,Authorization'",
+                                "method.response.header.Access-Control-Allow-Methods": "'*'",
+                                "method.response.header.Access-Control-Allow-Origin": "'*'"
+                            },
+                            "responseModels": {
+                                "application/json": "Empty"
+                            }
+                        }
+                    }
+                }
             },
-            "default": {
-              "statusCode": "400",
-              "responseParameters": {
-                "method.response.header.Access-Control-Allow-Headers": "'Content-Type,X-Amz-Date,Authorization'",
-                "method.response.header.Access-Control-Allow-Methods": "'*'",
-                "method.response.header.Access-Control-Allow-Origin": "'*'"
-              },
-              "responseModels": {
-                "application/json": "Empty"
-              }
+            "get": {
+                "operationId": "MySampleAPI-Hello-World-GET",
+                "x-api-deploy": {
+                    "sdk": {
+                        "method": "hello"
+                    }
+                },
+                "x-amazon-lambda": {
+                    "handler": "./hello/world",
+                    "memorySize": "128",
+                    "role": "arn:aws:iam::347191724861:role/Lambda",
+                    "timeout": "60",
+                    "runtime": "nodejs",
+                    "arn": "arn:aws:lambda:us-east-1:347191724861:function:MySampleAPI-Hello-World-GET"
+                },
+                "x-amazon-apigateway-auth": {
+                    "type": "NONE"
+                },
+                "x-amazon-apigateway-integration": {
+                    "type": "AWS",
+                    "uri": null,
+                    "apiKeyRequired": false,
+                    "httpMethod": "GET",
+                    "cacheNamespace": null,
+                    "cacheKeyParameters": [],
+                    "credentials": null,
+                    "requestTemplates": {
+                        "application/json": {
+                            "payload": "$input.params()",
+                            "path": "$input.params().path",
+                            "query": "$input.params().querystring",
+                            "header": "$input.params().header",
+                            "Authorization": "$input.params(\"Authorization\")"
+                        }
+                    },
+                    "requestParameters": {
+                        "method.request.header.Authorization": true
+                    },
+                    "requestModels": {
+                        "application/json": "Empty"
+                    },
+                    "responses": {
+                        "200": {
+                            "statusCode": "200",
+                            "responseParameters": {
+                                "method.response.header.Access-Control-Allow-Headers": "'Content-Type,X-Amz-Date,Authorization'",
+                                "method.response.header.Access-Control-Allow-Methods": "'*'",
+                                "method.response.header.Access-Control-Allow-Origin": "'*'"
+                            },
+                            "responseModels": {
+                                "application/json": "Empty"
+                            }
+                        },
+                        "default": {
+                            "statusCode": "400",
+                            "responseParameters": {
+                                "method.response.header.Access-Control-Allow-Headers": "'Content-Type,X-Amz-Date,Authorization'",
+                                "method.response.header.Access-Control-Allow-Methods": "'*'",
+                                "method.response.header.Access-Control-Allow-Origin": "'*'"
+                            },
+                            "responseModels": {
+                                "application/json": "Empty"
+                            }
+                        }
+                    }
+                }
             }
-          }
-        },
-        "operationId": "MySampleAPI-Hello-There-GET"
-      }
-    },
-    "/hello": {
-      "post": {
-        "x-amazon-lambda": {
-          "handler": "./hello/world",
-          "memorySize": "128",
-          "role": "arn:aws:iam::347191724861:role/Lambda",
-          "timeout": "60",
-          "runtime": "nodejs",
-          "arn": "arn:aws:lambda:us-east-1:347191724861:function:MySampleAPI-Hello-World-POST"
-        },
-        "x-amazon-apigateway-auth": {
-          "type": "NONE"
-        },
-        "x-amazon-apigateway-integration": {
-          "type": "AWS",
-          "uri": null,
-          "apiKeyRequired": false,
-          "httpMethod": "POST",
-          "cacheNamespace": null,
-          "cacheKeyParameters": [],
-          "credentials": null,
-          "requestTemplates": {
-            "application/json": {
-              "payload": "$input.params()",
-              "path": "$input.params().path",
-              "query": "$input.params().querystring",
-              "header": "$input.params().header",
-              "Authorization": "$input.params(\"Authorization\")"
-            }
-          },
-          "requestParameters": {
-            "method.request.header.Authorization": true
-          },
-          "requestModels": {
-            "application/json": "Empty"
-          },
-          "responses": {
-            "200": {
-              "statusCode": "200",
-              "responseParameters": {
-                "method.response.header.Access-Control-Allow-Headers": "'Content-Type,X-Amz-Date,Authorization'",
-                "method.response.header.Access-Control-Allow-Methods": "'*'",
-                "method.response.header.Access-Control-Allow-Origin": "'*'"
-              },
-              "responseModels": {
-                "application/json": "Empty"
-              }
-            },
-            "default": {
-              "statusCode": "400",
-              "responseParameters": {
-                "method.response.header.Access-Control-Allow-Headers": "'Content-Type,X-Amz-Date,Authorization'",
-                "method.response.header.Access-Control-Allow-Methods": "'*'",
-                "method.response.header.Access-Control-Allow-Origin": "'*'"
-              },
-              "responseModels": {
-                "application/json": "Empty"
-              }
-            }
-          }
-        },
-        "operationId": "MySampleAPI-Hello-World-POST"
-      },
-      "get": {
-        "x-amazon-lambda": {
-          "handler": "./hello/world",
-          "memorySize": "128",
-          "role": "arn:aws:iam::347191724861:role/Lambda",
-          "timeout": "60",
-          "runtime": "nodejs",
-          "arn": "arn:aws:lambda:us-east-1:347191724861:function:MySampleAPI-Hello-World-GET"
-        },
-        "x-amazon-apigateway-auth": {
-          "type": "NONE"
-        },
-        "x-amazon-apigateway-integration": {
-          "type": "AWS",
-          "uri": null,
-          "apiKeyRequired": false,
-          "httpMethod": "GET",
-          "cacheNamespace": null,
-          "cacheKeyParameters": [],
-          "credentials": null,
-          "requestTemplates": {
-            "application/json": {
-              "payload": "$input.params()",
-              "path": "$input.params().path",
-              "query": "$input.params().querystring",
-              "header": "$input.params().header",
-              "Authorization": "$input.params(\"Authorization\")"
-            }
-          },
-          "requestParameters": {
-            "method.request.header.Authorization": true
-          },
-          "requestModels": {
-            "application/json": "Empty"
-          },
-          "responses": {
-            "200": {
-              "statusCode": "200",
-              "responseParameters": {
-                "method.response.header.Access-Control-Allow-Headers": "'Content-Type,X-Amz-Date,Authorization'",
-                "method.response.header.Access-Control-Allow-Methods": "'*'",
-                "method.response.header.Access-Control-Allow-Origin": "'*'"
-              },
-              "responseModels": {
-                "application/json": "Empty"
-              }
-            },
-            "default": {
-              "statusCode": "400",
-              "responseParameters": {
-                "method.response.header.Access-Control-Allow-Headers": "'Content-Type,X-Amz-Date,Authorization'",
-                "method.response.header.Access-Control-Allow-Methods": "'*'",
-                "method.response.header.Access-Control-Allow-Origin": "'*'"
-              },
-              "responseModels": {
-                "application/json": "Empty"
-              }
-            }
-          }
-        },
-        "operationId": "MySampleAPI-Hello-World-GET"
-      }
+        }
     }
-  }
 }
